Fixing alignment issues

--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -39,3 +39,7 @@ span {
   font-weight: 900;
   color: #FFFFFF !important;
 }
+
+.description {
+  max-width: 600px;
+}
