--- a/src/stylesheets/Index.scss
+++ b/src/stylesheets/Index.scss
@@ -6,11 +6,26 @@ $color-secondary: #d4c7fc;
 $color-primary: #1A0554;
 $color-main: #9e9e9e;
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-color: #0c021a;
   color: #cbcbcb;
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
+  max-width: 1000px;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 100vh;
+  margin: 0px auto;
+  padding: 150px 0px;
 }
 
 ::selection {
